avidemux: push mode: find the correct chunk for segment following seek

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=684977